<resources>
    <string name="app_name">Alchemy Game</string>
    <string name="MapText">Map</string>
    <string name="InventoryText">Inventory</string>
    <string name="StoreText">Store</string>
    <string name="CraftText">Craft</string>
    <string name="StatsText">Stats</string>
    <string name="title_activity_map">MapActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">
        pk.eyJ1Ijoic2lyc3RlZWxlOTciLCJhIjoiY2s2c25sMHJiMDM5ZjNmcXFuaXdteXBpZCJ9.rJrQ8DHzX-R_MHKw3cSTrA
    </string>
    <string name="IngredientsTab">Ingredients</string>
    <string name="PotionsTab">Potions</string>
    <string name="SellButton">Sell</string>
    <string name="user_location_permission_explanation">Please give permission to use your location in order to access
        this app!
    </string>
    <string name="user_location_permission_not_granted">Sorry then you cannot play!</string>
    <string name="new_location"/>
    <string name="title_activity_crafting">Crafting</string>
</resources>
