<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/storeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="39dp"
        android:text="@string/StoreText"
        app:layout_constraintBottom_toTopOf="@+id/craftButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventoryButton" />

    <Button
        android:id="@+id/craftButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="40dp"
        android:text="@string/CraftText"
        app:layout_constraintBottom_toTopOf="@+id/statsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeButton" />

    <Button
        android:id="@+id/statsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="202dp"
        android:text="@string/StatsText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/craftButton" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="19dp"
        android:text="@string/MapText"
        app:layout_constraintBottom_toTopOf="@+id/inventoryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inventoryButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="28dp"
        android:text="@string/InventoryText"
        app:layout_constraintBottom_toTopOf="@+id/storeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapButton" />
</androidx.constraintlayout.widget.ConstraintLayout>